# document-extractor-poc

./: .gitignore  .markdownlint.json  .mega-linter.yml  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Product Comparison Matrix - Document Submission.xlsx  README.md  SECURITY.md  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report_form.yml  task_form.yml  user_story_form.yml
.github/workflows/: build-backend.yml  build-frontend.yml  build.yml  cd.yml  ci.yml  megalinter.yml  scorecard.yml
backend/: Dockerfile  build.py  detect_document_type.py  fedora.repo  ocr.py  pyproject.toml
backend/src/: context.py
backend/src/database/: database.py
backend/src/database/data/: document_item.py
backend/src/documents/: extract_text.py  get_document.py  upload_document.py  write_document.py
backend/src/forms/: 1099.py  __init__.py  dd214.py  form.py  ten_ninety_nine_nec.py  w2.py
backend/src/lambda/: s3_file_upload.py  text_extractor.py
backend/src/login/: authenticate.py  login.py
backend/src/login/user/: role.py
backend/src/ocr/: __init__.py  exception.py  ocr.py
backend/src/secret/: __init__.py  cloud_secret_manager.py  exception.py
backend/src/storage/: __init__.py  cloud_storage.py  exception.py
backend/tests/documents/: test_extract_text.py  test_get_document.py  test_upload_document.py  test_write_document.py
backend/tests/login/: test_authenticate.py  test_login.py
docs/: OCR Tools competitive analysis.xlsx  THREAT_MODEL.md  THREAT_MODEL.template.md  Use Cases & Extraction Info - Document Submission.xlsx  api_examples.md
docs/adrs/: 0001-record-architecture-decisions.md  0002-use-python-backend.md  0003-user-interface-to-s3-data-flow.md  0004-document-ids.md  0005-aws.md  0005-verify-api-endpoint-responses.md  0006-apigateway-lambda-dynamo-sqs.md  0006-upload-api-endpoint-responses.md  0007-iac-terraform.md  0008-javascript-react-frontend.md  0009-aws-textract.md  0010-pytest.md  0011-application-context.md
iac/: .terraform.lock.hcl  api_gateway.tf  cloudfront.tf  dynamodb.tf  endpoints.tf  iam.tf  kms.tf  lambda.tf  main.tf  outputs.tf  s3.tf  secrets.tf  sqs.tf  variables.tf
iac/endpoint/: api_gateway.tf  lambda.tf  (+2 more)
src/: build.py  document_classifier.py  get_extracted_document.py  pyproject.toml  sqs_dynamo_writer.py  text_extractor.py  update_extracted_document.py
test_data/: 1099 Sample.docx  DD214 Sample.docx  Pay Stub Sample.docx  W2 Sample.docx
ui/: eslint.config.mjs  index.html  package-lock.json  package.json
(+21 files in other folders)
