[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-typing>=2.20.0",
    "bcrypt>=4.3.0",
    "boto3>=1.37.1",
    "cryptography>=44.0.2",
    "iterator-chain>=1.1.0",
    "pyjwt>=2.10.1",
    "types-boto3[apigateway,dynamodb,s3,secretsmanager,sqs,textract]>=1.37.22",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]

[dependency-groups]
dev = [
    "cryptography>=44.0.2",
    "pytest>=8.3.5",
]
