[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.37.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]

#[build-system]
#requires = ["poetry-core", "poetry-plugin-lambda-build"]
#build-backend = "poetry.core.masonry.api"
#
#[tool.poetry.build]
#script = "build-extension.py"
#
#[tool.poetry-plugin-lambda-build]
#package-artifact-path = "package.zip"

#[tool.hatch.build.targets.custom]
#path = "hatch_build.py"

#[tool.hatch.build.targets.zipped-directory]
#install-name = "org.example.test"
#sources = [
#    "/src",
#]
